UPDATE - Patient Booking process is complete

--- a/app/src/main/res/layout/activity_get_appointment_details.xml
+++ b/app/src/main/res/layout/activity_get_appointment_details.xml
@@ -4,198 +4,171 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bottom_left_curve"
+    android:background="#1A446B"
     tools:context=".GetAppointmentDetails">
+
+    <View
+        android:id="@+id/view43"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_marginTop="30dp"
+        android:background="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="serif-monospace"
         android:text="@string/descriptiontext"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#1A446B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <EditText
         android:id="@+id/editTextTextMyDescription"
-        android:layout_width="260dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="8dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:background="#ffffff"
+        android:ellipsize="end"
         android:hint="@string/symptomshint"
         android:inputType="textPersonName"
-        android:textAlignment="viewStart"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
-        app:layout_constraintStart_toEndOf="@+id/textView15" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="serif-monospace"
-        android:text="@string/departmentCAPS"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
-    <Spinner
-        android:id="@+id/spinnerDepartmentBooking"
-        android:layout_width="210dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="25dp"
-        android:popupBackground="@drawable/spinnerbackground"
-        android:textAlignment="center"
+        android:maxLines="3"
+        android:textColor="#1A446B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />
+        app:layout_constraintStart_toEndOf="@+id/textView15"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <TextView
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="serif-monospace"
         android:text="@string/timeavailableCAPS"
-        android:textColor="#FFFFFF"
+        android:textColor="#1A446B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSetDate" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />
 
     <TextView
         android:id="@+id/textView26"
         android:layout_width="280dp"
         android:layout_height="30dp"
-        android:layout_marginTop="140dp"
-        android:background="@drawable/whiterectangle"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/button_white_and_blue_border_background"
         android:fontFamily="serif-monospace"
+        android:paddingTop="4dp"
         android:text="@string/details"
         android:textAlignment="center"
-        android:textColor="#0099ff"
+        android:textColor="#1A446B"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/view43" />
 
     <Spinner
         android:id="@+id/spinnerTimeBooking"
         android:layout_width="210dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="23dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/time_availability"
         android:popupBackground="@drawable/spinnerbackground"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSetDate" />
-
-    <Button
-        android:id="@+id/btnBackAppointmentsSet"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/whiterectangle"
-        android:fontFamily="serif-monospace"
-        android:text="@string/btnBack"
-        android:textAlignment="center"
-        android:textColor="#B71C1C"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />
 
     <Button
         android:id="@+id/buttonDoneSaveAppointment2"
         android:layout_width="140dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/whiterectangle"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/navy"
         android:fontFamily="monospace"
         android:text="@string/textokay"
         android:textAlignment="center"
-        android:textColor="#43A047"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPatientAge_new" />
+
+    <TextView
+        android:id="@+id/textView85"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:fontFamily="serif-monospace"
+        android:text="@string/date_available"
+        android:textColor="#1A446B"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25" />
+
+    <TextView
+        android:id="@+id/textViewAppointmentDate_New"
+        android:layout_width="160dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:drawableEnd="@drawable/ic_baseline_date_range_24"
+        android:drawablePadding="7dp"
+        android:elevation="5dp"
+        android:hint="@string/select_date_new"
+        android:paddingStart="10dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="5dp"
+        android:textAlignment="viewStart"
+        android:textColor="#1A446B"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerTimeBooking" />
 
-    <Button
-        android:id="@+id/buttonSetDate"
+    <TextView
+        android:id="@+id/textView87"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/whiterectangle"
-        android:text="SET DATE"
-        android:textColor="#090909"
-        app:backgroundTint="#E1F5FE"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="serif-monospace"
+        android:text="@string/patients_age"
+        android:textColor="#1A446B"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+        app:layout_constraintTop_toBottomOf="@+id/textView85" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayoutCalendarAppointments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:background="#E1F5FE"
-        android:visibility="gone"
+    <EditText
+        android:id="@+id/editTextPatientAge_new"
+        android:layout_width="180dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#ffffff"
+        android:ems="10"
+        android:hint="@string/enter_age"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <CalendarView
-                android:id="@+id/calendarViewappointments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:id="@+id/divider4"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toTopOf="@+id/buttonDoneCalendar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <Button
-                android:id="@+id/buttonDoneCalendar"
-                android:layout_width="140dp"
-                android:layout_height="50dp"
-                android:background="@drawable/whiterectangle"
-                android:fontFamily="serif-monospace"
-                android:text="@string/proceedbutton"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:backgroundTint="#CE93D8"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </RelativeLayout>
+        app:layout_constraintStart_toEndOf="@+id/textView87"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDate_New" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
