--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -31,14 +31,14 @@
         <TextView
             android:id="@+id/textViewAppointmentDescriptionNew"
             android:layout_width="200dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:hint="@string/descriptiontext"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -50,11 +50,11 @@
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:hint="@string/departmentCAPS"
+            android:hint="@string/age"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -70,7 +70,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -86,7 +86,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -121,15 +121,15 @@
 
         <TextView
             android:id="@+id/textView88"
-            android:layout_width="200dp"
+            android:layout_width="430dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_square_new"
+            android:elevation="5dp"
             android:text="@string/doctorassigned"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
-            android:elevation="5dp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="@+id/view42"
             app:layout_constraintStart_toStartOf="@+id/view42"
